# ytbauto

./: README.md  main.py  pyproject.toml  utils.py
src/: README.md  audio.py  brand_persona.json  config.py  main.py  models.py  planning.py  utils.py  visuals.py
src/services/: __init__.py  audio_service.py  generative_assembly_service.py  media_service.py  planning_service.py  remix_assembly_service.py  video_analysis_service.py
src/video_plans/: ASD_Overview.json  A_Day_in_the_Life_of_A.json  Alphabet_Exploration_The_Letter_A.json  Create_Random_Video.json  Create_Something.json  Creating_Compelling_Videos_in_Simple_Steps.json  Discovering_Something_New.json  Do_Something.json  Do_Something_Ignite_Action.json  Embrace_the_Journey_Go.json  Exploration_of_the_Letter_A.json  Explore_the_Power_of_a.json  Exploring_the_Essence_of_A.json  Exploring_the_New_Cone.json  How_to_Ace_the_IELTS_Speaking_Test_My_Personal_Story.json  Just_Do_Something.json  Overcoming_the_Blank_Mind_My_IELTS_Tale.json  Random_Video.json  Take_Action_Do_Something.json  The_Alphabet_Adventure_Letter_A.json  The_Future_of_Technology.json  The_Importance_of_A.json  The_Journey_Begins_Embracing_the_Unknown.json  The_Journey_of_a.json  The_Mystery_of_ıouıooo.json  The_Power_of_Acknowledgment.json  The_Power_of_Go.json  The_Power_of_the_Letter_A.json  Things_Nobody_Tells_You_About_Living_Alone.json  Understanding_ASD_Autism_Spectrum_Disorder.json  some_video.json
src/video_processing/: editor.py
